--- a/index.html
+++ b/index.html
@@ -1,44 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>QuadraMap Demo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  …
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
-    html, body { height:100%; margin:0; padding:0; }
-    #mapid { height:100vh; width:100vw; }
-    .controls {
-      position:absolute; top:15px; left:20px; z-index:1001;
-      background:#fff; padding:8px 18px; border-radius:7px;
-      box-shadow:0 1px 6px rgba(0,0,0,0.18); font:15px/1.4 sans-serif;
-      display:flex; gap:16px; align-items:center;
-    }
-    .legend {
-      background:#fff; padding:8px; border-radius:6px;
-      font-size:12px; line-height:1.3; color:#333;
-      box-shadow:0 1px 3px rgba(0,0,0,0.1);
-    }
-    .custom-leaflet-popup .leaflet-popup-content-wrapper {
-      max-height:55vh; overflow-y:auto!important;
-    }
-    .custom-leaflet-popup .leaflet-popup-content {
-      max-height:52vh; overflow-y:auto!important;
-    }
+    /* Full‐screen map + control panel + legend styling */
   </style>
 </head>
 <body>
+  <!-- Controls for jurisdiction + subcategory -->
   <div class="controls">
-    <label>
-      Jurisdiction:
+    <label>Jurisdiction:
       <select id="jurisdictionSelect">
         <option value="US">US</option>
         <option value="EU">EU</option>
         <option value="UK">UK</option>
       </select>
     </label>
-    <label>
-      Subcategory:
+    <label>Subcategory:
       <select id="subcategorySelect">
         <option value="all">All Categories</option>
         <option value="Sectoral">Sectoral</option>
@@ -48,7 +27,11 @@
       </select>
     </label>
   </div>
+
+  <!-- Leaflet map container -->
   <div id="mapid"></div>
+
+  <!-- Leaflet core + your main script -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="map.js"></script>
 </body>
