--- a/index.html
+++ b/index.html
@@ -1,38 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  …
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+  <meta charset="utf-8">
+  <title>QuadraMapDemo – US/EU/UK Sanctions Map</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="leaflet.css">
   <style>
-    /* Full‐screen map + control panel + legend styling */
+    html, body { margin: 0; padding: 0; height: 100%; }
+    #mapid { width: 100vw; height: 100vh; }
+    .legend {
+      background: white;
+      padding: 6px;
+      border-radius: 4px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      font: 14px sans-serif;
+    }
+    .legend i {
+      display: inline-block;
+      width: 18px;
+      height: 18px;
+      margin-right: 6px;
+      vertical-align: middle;
+      opacity: 0.8;
+    }
+    /* Dropdown UI top right */
+    .dropdown-bar {
+      position: absolute;
+      top: 18px;
+      right: 26px;
+      z-index: 1000;
+      background: rgba(255,255,255,0.92);
+      padding: 8px 18px;
+      border-radius: 7px;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.16);
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      font: 15px/1.4 sans-serif;
+    }
+    .dropdown-bar select {
+      font-size: 15px;
+      padding: 3px 9px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
+    .dropdown-bar label {
+      margin-right: 3px;
+      font-weight: 600;
+    }
+    /* Optional: To keep dropdown above popups on mobile */
+    @media (max-width: 700px) {
+      .dropdown-bar { font-size: 13px; padding: 7px 10px; gap: 6px; }
+      .dropdown-bar select { font-size: 13px; }
+    }
   </style>
 </head>
 <body>
-  <!-- Controls for jurisdiction + subcategory -->
-  <div class="controls">
-    <label>Jurisdiction:
-      <select id="jurisdictionSelect">
-        <option value="US">US</option>
-        <option value="EU">EU</option>
-        <option value="UK">UK</option>
-      </select>
-    </label>
-    <label>Subcategory:
-      <select id="subcategorySelect">
-        <option value="all">All Categories</option>
-        <option value="Sectoral">Sectoral</option>
-        <option value="Financial">Financial</option>
-        <option value="Goods">Goods</option>
-        <option value="Services">Services</option>
-      </select>
-    </label>
+  <div class="dropdown-bar">
+    <label for="jurisdictionSelect">Jurisdiction:</label>
+    <select id="jurisdictionSelect">
+      <option value="US">US</option>
+      <option value="EU">EU</option>
+      <option value="UK">UK</option>
+    </select>
+    <label for="subcategorySelect">Category:</label>
+    <select id="subcategorySelect">
+      <option value="all">All Categories</option>
+      <option value="Sectoral">Sectoral</option>
+      <option value="Financial">Financial</option>
+      <option value="Goods">Goods</option>
+      <option value="Services">Services</option>
+    </select>
   </div>
 
-  <!-- Leaflet map container -->
   <div id="mapid"></div>
 
-  <!-- Leaflet core + your main script -->
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="leaflet.js"></script>
   <script src="map.js"></script>
 </body>
 </html>
